Added definition for admin put and delete.
